[gd_scene load_steps=3 format=3 uid="uid://cdeyp0w1o4al"]

[ext_resource type="Script" uid="uid://dnx8eyfj0qqm7" path="res://src/player.gd" id="1_lowyb"]
[ext_resource type="PackedScene" uid="uid://74c1s3yxa0bd" path="res://src/proyectile.tscn" id="2_gmfve"]

[node name="Player" type="Area2D"]
collision_mask = 2
script = ExtResource("1_lowyb")
proyectile_scene = ExtResource("2_gmfve")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -40, -24, 24, 0, 8, 24, 24)

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, -40, -24, 24, 0, 8, 24, 24)

[node name="ShipTip" type="Marker2D" parent="."]
position = Vector2(0, -40)

[node name="ProyectileContainer" type="Node" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
